[package]
name = "json-with-comments"
authors = ["hayas1 <h4ystack@gmail.com>"]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/hayas1/json-with-comments"
homepage = "https://hayas1.github.io/json-with-comments/json_with_comments/"
readme = "README.md"

[dependencies]
serde = "1.0.196"
num = "0.4.0"
itoa = "1.0.10"
ryu = "1.0.17"

thiserror = "1.0.57"

[dev-dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.115"

[lints.clippy]
unit_arg = "allow"
manual_is_ascii_check = "allow"
new_without_default = "allow"

# tests
unit_cmp = "allow"
bool_assert_comparison = "allow"
approx_constant = "allow"
excessive_precision = "allow"
redundant_pattern_matching = "allow"
let_unit_value = "allow"
enum_variant_names = "allow"
disallowed_names = "allow"

[badges]
github = { repository = "hayas1/json-with-comments", workflow = "Master" }
