[package]
name = "json-with-comments"
authors = ["hayas1 <h4ystack@gmail.com>"]
version = "0.1.5"
categories = ["parsing", "encoding"]
description = "JSONC library for Rust"
edition = "2021"
license = "MIT"
repository = "https://github.com/hayas1/json-with-comments"
readme = "README.md"

[dependencies]
serde = "1.0.197"
num = "0.4.2"
itoa = "1.0.11"
ryu = "1.0.17"
indexmap = { version = "2.2.6", features = ["serde"], optional = true }

thiserror = "1.0.58"

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[lints.clippy]
unit_arg = "allow"
manual_is_ascii_check = "allow"
new_without_default = "allow"

# tests
unit_cmp = "allow"
bool_assert_comparison = "allow"
approx_constant = "allow"
excessive_precision = "allow"
redundant_pattern_matching = "allow"
let_unit_value = "allow"
enum_variant_names = "allow"
disallowed_names = "allow"

[badges]
github = { repository = "hayas1/json-with-comments", workflow = "Master" }

[features]
preserve_order = ["indexmap"]
raw_value = []
